# estudo-de-caso-rust

./: Cargo.toml  README.md
benches/: search_bench.rs
src/: graph.rs  index.rs  lib.rs  loader.rs  main.rs  model.rs  tokenizer.rs
tests/: integration.rs
tests/data/: sample.csv
