[package]
name = "mega_store_search"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = "0.6"       
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
csv = "1.1"
clap = { version = "4.0", features = ["derive"] }
unicode-normalization = "0.1"
regex               = "1.7"
lazy_static         = "1.4"
lru = "0.7"


[dev-dependencies]
criterion    = "0.4"

[[bench]]
name = "search_bench"
harness = false